# service-desk-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  Dockerfile.web  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  ruff.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: README.md  ROADMAP_UX_API.md  __init__.py  config.py  main.py  openapi.json  server.py
api/routers/: __init__.py  agent.py  branch_packs.py  commands.py  intake.py  tickets.py
api/schemas/: __init__.py  branch_pack.py  commands.py  css.py  ticket.py
api/services/: __init__.py  command_service.py  css_service.py  intake_service.py  llm_analyst.py  runtime_service.py  ticket_service.py
api/websocket/: manager.py
audit/: README.md  ROADMAP_Audit_Process.md
audit/schema/: audit_telemetry.schema.json
docs/: ROADMAP.md
runtime/: State_Machine.yaml  Workflow.yaml  branch_packs_catalog_v1_0.yaml  command_palette.md  context_payload.schema.json  context_payload.template.json  css_scoring.yaml  powershell_diagnostics_catalog.yaml  powershell_nondisruptive_catalog.yaml  powershell_operations_catalog.yaml  router.txt  taxonomy_pack_mapping.yaml
runtime/comms_templates/: README.md  templates.yaml
runtime/kb_articles/: sops.yaml
runtime/resolution_logs/: resolved_cases.yaml
scripts/agent/: __init__.py  agent_loop.py  command_handler.py  config.py  cp_manager.py  css_calculator.py  output_formatter.py  runtime_loader.py
tests/: smoke_test.md
web/: .env.example  package-lock.json  package.json  tailwind.config.js
(+66 files in other folders)
